:sparkles: Added add item

--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -20,5 +20,29 @@
 	"error.required": "Required",
 	"error.email": "Your e-mail isn't in the good format.",
 	"error.password.character": "Your password need to have 8 characters.",
-	"error.password.confirm": "Yours passwords aren't same."
+	"error.password.confirm": "Yours passwords aren't same.",
+	"navigation.students": "Students",
+	"navigation.professors": "Professors",
+	"navigation.calendars": "Calendars",
+	"navigation.pathways": "Pathways",
+	"navigation.modules": "Modules",
+	"navigation.cours": "Cours",
+	"navigation.rooms": "Rooms",
+	"navigation.compagnies": "Compagnies",
+	"navigation.settings": "Settings",
+	"add.compagny": "Add compagny",
+	"add.cours": "Add cours",
+	"add.module": "Add module",
+	"add.pathway": "Add pathway",
+	"add.professor": "Add professor",
+	"add.room": "Add room",
+	"add.student": "Add student",
+	"no.data": "No data",
+	"no.data.compagny": "No compagny",
+	"no.data.cours": "No cours",
+	"no.data.module": "No module",
+	"no.data.pathway": "No pathway",
+	"no.data.professor": "No professor",
+	"no.data.room": "No room",
+	"no.data.student": "No student"
 }
