--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -20,5 +20,29 @@
 	"error.required": "Requis",
 	"error.email": "Votre e-mail n'est pas au bon format.",
 	"error.password.character": "Votre mot de passe doit contenir au moins 8 charactères.",
-	"error.password.confirm": "Vos deux mots de passe ne sont pas identiques."
+	"error.password.confirm": "Vos deux mots de passe ne sont pas identiques.",
+	"navigation.students": "Édudiants",
+	"navigation.professors": "Professeurs",
+	"navigation.calendars": "Calendriers",
+	"navigation.pathways": "Formations",
+	"navigation.modules": "Modules",
+	"navigation.cours": "Cours",
+	"navigation.rooms": "Salles",
+	"navigation.compagnies": "Entreprises",
+	"navigation.settings": "Paramètres",
+	"add.compagny": "Ajouter une entreprise",
+	"add.cours": "Ajouter un cours",
+	"add.module": "Ajouter un module",
+	"add.pathway": "Ajouter une formation",
+	"add.professor": "Ajouter un professeur",
+	"add.room": "Ajouter une salle",
+	"add.student": "Ajouter un étudiant",
+	"no.data": "Pas de données",
+	"no.data.compagny": "Pas d'entreprise",
+	"no.data.cours": "Pas de cours",
+	"no.data.module": "Pas de module",
+	"no.data.pathway": "Pas de formation",
+	"no.data.professor": "Pas de professeur",
+	"no.data.room": "Pas de salle",
+	"no.data.student": "Pas d'étudiant"
 }
