:sparkles: Added moooooore thinks

--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -26,23 +26,37 @@
 	"navigation.calendars": "Calendars",
 	"navigation.pathways": "Pathways",
 	"navigation.modules": "Modules",
-	"navigation.cours": "Cours",
+	"navigation.lessons": "Lessons",
 	"navigation.rooms": "Rooms",
-	"navigation.compagnies": "Compagnies",
+	"navigation.companies": "Compagnies",
 	"navigation.settings": "Settings",
-	"add.compagny": "Add compagny",
-	"add.cours": "Add cours",
+	"add.company": "Add company",
+	"add.lesson": "Add lesson",
 	"add.module": "Add module",
 	"add.pathway": "Add pathway",
 	"add.professor": "Add professor",
 	"add.room": "Add room",
 	"add.student": "Add student",
 	"no.data": "No data",
-	"no.data.compagny": "No compagny",
-	"no.data.cours": "No cours",
+	"no.data.company": "No company",
+	"no.data.lesson": "No lesson",
 	"no.data.module": "No module",
 	"no.data.pathway": "No pathway",
 	"no.data.professor": "No professor",
 	"no.data.room": "No room",
-	"no.data.student": "No student"
+	"no.data.student": "No student",
+	"settings.constraints": "Constraints",
+	"settings.constraints.modules": "Modules constraints",
+	"settings.constraints.professor": "Professors contraints",
+	"settings.constraints.compagnies": "Compagnies contraints",
+	"settings.scope": "Scope",
+	"settings.school": "School",
+	"settings.school.hour": "Hour",
+	"settings.school.day": "Day",
+	"settings.school.week": "Week",
+	"settings.school.add.line": "Add line",
+	"settings.school.constraints.modules": "Modules constraints",
+	"settings.global": "Global",
+	"settings.global.accessiblity": "Accessibility mode",
+	"logout": "Logout"
 }
