--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -26,23 +26,37 @@
 	"navigation.calendars": "Calendriers",
 	"navigation.pathways": "Formations",
 	"navigation.modules": "Modules",
-	"navigation.cours": "Cours",
+	"navigation.lessons": "Cours",
 	"navigation.rooms": "Salles",
-	"navigation.compagnies": "Entreprises",
+	"navigation.companies": "Entreprises",
 	"navigation.settings": "Paramètres",
-	"add.compagny": "Ajouter une entreprise",
-	"add.cours": "Ajouter un cours",
+	"add.company": "Ajouter une entreprise",
+	"add.lesson": "Ajouter un cours",
 	"add.module": "Ajouter un module",
 	"add.pathway": "Ajouter une formation",
 	"add.professor": "Ajouter un professeur",
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
 	"no.data": "Pas de données",
-	"no.data.compagny": "Pas d'entreprise",
-	"no.data.cours": "Pas de cours",
+	"no.data.company": "Pas d'entreprise",
+	"no.data.lesson": "Pas de cours",
 	"no.data.module": "Pas de module",
 	"no.data.pathway": "Pas de formation",
 	"no.data.professor": "Pas de professeur",
 	"no.data.room": "Pas de salle",
-	"no.data.student": "Pas d'étudiant"
+	"no.data.student": "Pas d'étudiant",
+	"settings.constraints": "Contraintes",
+	"settings.constraints.modules": "Contraintes des modules",
+	"settings.constraints.professor": "Contraintes des professeurs",
+	"settings.constraints.compagnies": "Contraintes des entreprises",
+	"settings.scope": "Fonctionnalités",
+	"settings.school": "École",
+	"settings.school.hour": "Heure",
+	"settings.school.day": "Jour",
+	"settings.school.week": "Semaine",
+	"settings.school.add.line": "Ajouter une ligne",
+	"settings.school.constraints.modules": "Contraintes des modules",
+	"settings.global": "Globale",
+	"settings.global.accessiblity": "Mode accessibilité",
+	"logout": "Déconnexion"
 }
