:sparkles: Added details

--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -28,7 +28,7 @@
 	"navigation.modules": "Modules",
 	"navigation.lessons": "Lessons",
 	"navigation.rooms": "Rooms",
-	"navigation.companies": "Compagnies",
+	"navigation.companies": "Companies",
 	"navigation.settings": "Settings",
 	"add.company": "Add company",
 	"add.lesson": "Add lesson",
@@ -48,7 +48,7 @@
 	"settings.constraints": "Constraints",
 	"settings.constraints.modules": "Modules constraints",
 	"settings.constraints.professor": "Professors contraints",
-	"settings.constraints.compagnies": "Compagnies contraints",
+	"settings.constraints.companies": "Companies contraints",
 	"settings.scope": "Scope",
 	"settings.school": "School",
 	"settings.school.hour": "Hour",
