--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -48,7 +48,7 @@
 	"settings.constraints": "Contraintes",
 	"settings.constraints.modules": "Contraintes des modules",
 	"settings.constraints.professor": "Contraintes des professeurs",
-	"settings.constraints.compagnies": "Contraintes des entreprises",
+	"settings.constraints.companies": "Contraintes des entreprises",
 	"settings.scope": "Fonctionnalités",
 	"settings.school": "École",
 	"settings.school.hour": "Heure",
