--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -37,6 +37,7 @@
 	"add.professor": "Add professor",
 	"add.room": "Add room",
 	"add.student": "Add student",
+	"add.calendar": "Add calendar",
 	"no.data": "No data",
 	"no.data.company": "No company",
 	"no.data.lesson": "No lesson",
