--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -37,6 +37,7 @@
 	"add.professor": "Ajouter un professeur",
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
+	"add.calendar": "Ajouter un calendrier",
 	"no.data": "Pas de données",
 	"no.data.company": "Pas d'entreprise",
 	"no.data.lesson": "Pas de cours",
