:sparkles: Added header for details

--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -38,6 +38,15 @@
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
 	"add.calendar": "Ajouter un calendrier",
+	"edit.company": "Editer l'entreprise",
+	"edit.lesson": "Editer le cours",
+	"edit.module": "Editer le module",
+	"edit.pathway": "Editer la formation",
+	"edit.professor": "Editer le professeur",
+	"edit.room": "Editer la salle",
+	"edit.student": "Editer le étudiant",
+	"edit.calendar": "Editer le calendrier",
+	"edit.constraints": "Editer les contraintes",
 	"no.data": "Pas de données",
 	"no.data.company": "Pas d'entreprise",
 	"no.data.lesson": "Pas de cours",
