--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -38,6 +38,15 @@
 	"add.room": "Add room",
 	"add.student": "Add student",
 	"add.calendar": "Add calendar",
+	"edit.company": "Edit company",
+	"edit.lesson": "Edit lesson",
+	"edit.module": "Edit module",
+	"edit.pathway": "Edit pathway",
+	"edit.professor": "Edit professor",
+	"edit.room": "Edit room",
+	"edit.student": "Edit student",
+	"edit.calendar": "Edit calendar",
+	"edit.constraints": "Edit constraints",
 	"no.data": "No data",
 	"no.data.company": "No company",
 	"no.data.lesson": "No lesson",
