:sparkles: Updated details student and order translation

--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -1,35 +1,6 @@
 {
-	"form.login": "Connexion",
-	"form.login.username": "Nom d'utilisateur",
-	"form.login.username.placeholder": "c.dupont@my-email.com",
-	"form.login.password": "Mot de passe",
-	"form.login.password.placeholder": "Mon super mot de passe",
-	"form.login.login": "Connexion",
-	"form.login.forget": "Mot de passe oublié ?",
-	"form.login.signup": "Créer un compte",
-	"form.signup": "Création de compte",
-	"form.signup.username": "Nom d'utilisateur",
-	"form.signup.username.placeholder": "c.dupont@my-email.com",
-	"form.signup.password": "Mot de passe",
-	"form.signup.password.confirm": "Confirmation de mot de passe",
-	"form.signup.password.placeholder": "Mon super mot de passe",
-	"form.signup.create": "Créer",
-	"form.signup.login": "Se connecter",
-	"form.reset": "Réinitialiser",
-	"form.reset.update": "Mettre à jour",
-	"error.required": "Requis",
-	"error.email": "Votre e-mail n'est pas au bon format.",
-	"error.password.character": "Votre mot de passe doit contenir au moins 8 charactères.",
-	"error.password.confirm": "Vos deux mots de passe ne sont pas identiques.",
-	"navigation.students": "Édudiants",
-	"navigation.professors": "Professeurs",
-	"navigation.calendars": "Calendriers",
-	"navigation.pathways": "Formations",
-	"navigation.modules": "Modules",
-	"navigation.lessons": "Cours",
-	"navigation.rooms": "Salles",
-	"navigation.companies": "Entreprises",
-	"navigation.settings": "Paramètres",
+	"add": "Ajouter",
+	"add.calendar": "Ajouter un calendrier",
 	"add.company": "Ajouter une entreprise",
 	"add.lesson": "Ajouter un cours",
 	"add.module": "Ajouter un module",
@@ -37,16 +8,48 @@
 	"add.professor": "Ajouter un professeur",
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
-	"add.calendar": "Ajouter un calendrier",
+	"cancel": "Annuler",
+	"edit.calendar": "Editer le calendrier",
 	"edit.company": "Editer l'entreprise",
+	"edit.constraints": "Editer les contraintes",
 	"edit.lesson": "Editer le cours",
 	"edit.module": "Editer le module",
 	"edit.pathway": "Editer la formation",
 	"edit.professor": "Editer le professeur",
 	"edit.room": "Editer la salle",
-	"edit.student": "Editer le étudiant",
-	"edit.calendar": "Editer le calendrier",
-	"edit.constraints": "Editer les contraintes",
+	"edit.student": "Editer l'étudiant",
+	"error.email": "Votre e-mail n'est pas au bon format.",
+	"error.required": "Requis",
+	"error.password.character": "Votre mot de passe doit contenir au moins 8 charactères.",
+	"error.password.confirm": "Vos deux mots de passe ne sont pas identiques.",
+	"form.login": "Connexion",
+	"form.login.forget": "Mot de passe oublié ?",
+	"form.login.login": "Connexion",
+	"form.login.password": "Mot de passe",
+	"form.login.password.placeholder": "Mon super mot de passe",
+	"form.login.signup": "Créer un compte",
+	"form.login.username": "Nom d'utilisateur",
+	"form.login.username.placeholder": "c.dupont@my-email.com",
+	"form.reset": "Réinitialiser",
+	"form.reset.update": "Mettre à jour",
+	"form.signup": "Création de compte",
+	"form.signup.create": "Créer",
+	"form.signup.login": "Se connecter",
+	"form.signup.password": "Mot de passe",
+	"form.signup.password.confirm": "Confirmation de mot de passe",
+	"form.signup.password.placeholder": "Mon super mot de passe",
+	"form.signup.username": "Nom d'utilisateur",
+	"form.signup.username.placeholder": "c.dupont@my-email.com",
+	"logout": "Déconnexion",
+	"navigation.calendars": "Calendriers",
+	"navigation.companies": "Entreprises",
+	"navigation.lessons": "Cours",
+	"navigation.modules": "Modules",
+	"navigation.pathways": "Formations",
+	"navigation.professors": "Professeurs",
+	"navigation.rooms": "Salles",
+	"navigation.settings": "Paramètres",
+	"navigation.students": "Édudiants",
 	"no.data": "Pas de données",
 	"no.data.company": "Pas d'entreprise",
 	"no.data.lesson": "Pas de cours",
@@ -56,17 +59,16 @@
 	"no.data.room": "Pas de salle",
 	"no.data.student": "Pas d'étudiant",
 	"settings.constraints": "Contraintes",
+	"settings.constraints.companies": "Contraintes des entreprises",
 	"settings.constraints.modules": "Contraintes des modules",
 	"settings.constraints.professor": "Contraintes des professeurs",
-	"settings.constraints.companies": "Contraintes des entreprises",
-	"settings.scope": "Fonctionnalités",
-	"settings.school": "École",
-	"settings.school.hour": "Heure",
-	"settings.school.day": "Jour",
-	"settings.school.week": "Semaine",
-	"settings.school.add.line": "Ajouter une ligne",
-	"settings.school.constraints.modules": "Contraintes des modules",
 	"settings.global": "Globale",
 	"settings.global.accessiblity": "Mode accessibilité",
-	"logout": "Déconnexion"
+	"settings.scope": "Fonctionnalités",
+	"settings.school": "École",
+	"settings.school.add.line": "Ajouter une ligne",
+	"settings.school.constraints.modules": "Contraintes des modules",
+	"settings.school.day": "Jour",
+	"settings.school.hour": "Heure",
+	"settings.school.week": "Semaine"
 }
