--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -1,35 +1,6 @@
 {
-	"form.login": "Log in form",
-	"form.login.username": "User name",
-	"form.login.username.placeholder": "c.dupont@my-email.com",
-	"form.login.password": "Password",
-	"form.login.password.placeholder": "My strong password",
-	"form.login.login": "Login",
-	"form.login.forget": "Password forget?",
-	"form.login.signup": "Create account",
-	"form.signup": "Sign up",
-	"form.signup.username": "User name",
-	"form.signup.username.placeholder": "c.dupont@my-email.com",
-	"form.signup.password": "Password",
-	"form.signup.password.confirm": "Confirm password",
-	"form.signup.password.placeholder": "My strong password",
-	"form.signup.create": "Create",
-	"form.signup.login": "Login",
-	"form.reset": "Reset",
-	"form.reset.update": "Update",
-	"error.required": "Required",
-	"error.email": "Your e-mail isn't in the good format.",
-	"error.password.character": "Your password need to have 8 characters.",
-	"error.password.confirm": "Yours passwords aren't same.",
-	"navigation.students": "Students",
-	"navigation.professors": "Professors",
-	"navigation.calendars": "Calendars",
-	"navigation.pathways": "Pathways",
-	"navigation.modules": "Modules",
-	"navigation.lessons": "Lessons",
-	"navigation.rooms": "Rooms",
-	"navigation.companies": "Companies",
-	"navigation.settings": "Settings",
+	"add": "Add",
+	"add.calendar": "Add calendar",
 	"add.company": "Add company",
 	"add.lesson": "Add lesson",
 	"add.module": "Add module",
@@ -37,16 +8,48 @@
 	"add.professor": "Add professor",
 	"add.room": "Add room",
 	"add.student": "Add student",
-	"add.calendar": "Add calendar",
+	"cancel": "Cancel",
+	"edit.calendar": "Edit calendar",
 	"edit.company": "Edit company",
+	"edit.constraints": "Edit constraints",
 	"edit.lesson": "Edit lesson",
 	"edit.module": "Edit module",
 	"edit.pathway": "Edit pathway",
 	"edit.professor": "Edit professor",
 	"edit.room": "Edit room",
 	"edit.student": "Edit student",
-	"edit.calendar": "Edit calendar",
-	"edit.constraints": "Edit constraints",
+	"error.email": "Your e-mail isn't in the good format.",
+	"error.required": "Required",
+	"error.password.character": "Your password need to have 8 characters.",
+	"error.password.confirm": "Yours passwords aren't same.",
+	"form.login": "Log in form",
+	"form.login.forget": "Password forget?",
+	"form.login.login": "Login",
+	"form.login.password": "Password",
+	"form.login.password.placeholder": "My strong password",
+	"form.login.signup": "Create account",
+	"form.login.username": "User name",
+	"form.login.username.placeholder": "c.dupont@my-email.com",
+	"form.reset": "Reset",
+	"form.reset.update": "Update",
+	"form.signup": "Sign up",
+	"form.signup.create": "Create",
+	"form.signup.login": "Login",
+	"form.signup.password": "Password",
+	"form.signup.password.confirm": "Confirm password",
+	"form.signup.password.placeholder": "My strong password",
+	"form.signup.username": "User name",
+	"form.signup.username.placeholder": "c.dupont@my-email.com",
+	"logout": "Logout",
+	"navigation.calendars": "Calendars",
+	"navigation.companies": "Companies",
+	"navigation.lessons": "Lessons",
+	"navigation.modules": "Modules",
+	"navigation.pathways": "Pathways",
+	"navigation.professors": "Professors",
+	"navigation.rooms": "Rooms",
+	"navigation.settings": "Settings",
+	"navigation.students": "Students",
 	"no.data": "No data",
 	"no.data.company": "No company",
 	"no.data.lesson": "No lesson",
@@ -56,17 +59,16 @@
 	"no.data.room": "No room",
 	"no.data.student": "No student",
 	"settings.constraints": "Constraints",
+	"settings.constraints.companies": "Companies contraints",
 	"settings.constraints.modules": "Modules constraints",
 	"settings.constraints.professor": "Professors contraints",
-	"settings.constraints.companies": "Companies contraints",
-	"settings.scope": "Scope",
-	"settings.school": "School",
-	"settings.school.hour": "Hour",
-	"settings.school.day": "Day",
-	"settings.school.week": "Week",
-	"settings.school.add.line": "Add line",
-	"settings.school.constraints.modules": "Modules constraints",
 	"settings.global": "Global",
 	"settings.global.accessiblity": "Accessibility mode",
-	"logout": "Logout"
+	"settings.scope": "Scope",
+	"settings.school": "School",
+	"settings.school.add.line": "Add line",
+	"settings.school.constraints.modules": "Modules constraints",
+	"settings.school.day": "Day",
+	"settings.school.hour": "Hour",
+	"settings.school.week": "Week"
 }
