--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -9,6 +9,7 @@
 	"add.room": "Add room",
 	"add.student": "Add student",
 	"cancel": "Cancel",
+	"edit": "Edit",
 	"edit.calendar": "Edit calendar",
 	"edit.company": "Edit company",
 	"edit.constraints": "Edit constraints",
