--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -9,6 +9,7 @@
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
 	"cancel": "Annuler",
+	"edit": "Editer",
 	"edit.calendar": "Editer le calendrier",
 	"edit.company": "Editer l'entreprise",
 	"edit.constraints": "Editer les contraintes",
