:sparkles: Deleted action

--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -9,6 +9,16 @@
 	"add.room": "Add room",
 	"add.student": "Add student",
 	"cancel": "Cancel",
+	"delete": "Delete",
+	"delete.calendar": "Delete calendar",
+	"delete.company": "Delete company",
+	"delete.constraints": "Delete constraints",
+	"delete.lesson": "Delete lesson",
+	"delete.module": "Delete module",
+	"delete.pathway": "Delete pathway",
+	"delete.professor": "Delete professor",
+	"delete.room": "Delete room",
+	"delete.student": "Delete student",
 	"edit": "Edit",
 	"edit.calendar": "Edit calendar",
 	"edit.company": "Edit company",
