--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -9,6 +9,16 @@
 	"add.room": "Ajouter une salle",
 	"add.student": "Ajouter un étudiant",
 	"cancel": "Annuler",
+	"delete": "Supprimer",
+	"delete.calendar": "Supprimer le calendrier",
+	"delete.company": "Supprimer l'entreprise",
+	"delete.constraints": "Supprimer la contrainte",
+	"delete.lesson": "Supprimer le cours",
+	"delete.module": "Supprimer le module",
+	"delete.pathway": "Supprimer la formation",
+	"delete.professor": "Supprimer le professeur",
+	"delete.room": "Supprimer la salle",
+	"delete.student": "Supprimer student",
 	"edit": "Editer",
 	"edit.calendar": "Editer le calendrier",
 	"edit.company": "Editer l'entreprise",
