:sparkles: Ajout du profil et début de refonte des contraintes

--- a/src/Tools/translation/languages/en.json
+++ b/src/Tools/translation/languages/en.json
@@ -71,8 +71,12 @@
 	"no.data.student": "No student",
 	"settings.constraints": "Constraints",
 	"settings.constraints.companies": "Companies contraints",
+	"settings.constraints.lesson": "Lessons contraints",
 	"settings.constraints.modules": "Modules constraints",
+	"settings.constraints.pathway": "Pathways contraints",
 	"settings.constraints.professor": "Professors contraints",
+	"settings.constraints.room": "Rooms contraints",
+	"settings.constraints.student": "Students contraints",
 	"settings.global": "Global",
 	"settings.global.accessiblity": "Accessibility mode",
 	"settings.scope": "Scope",
