--- a/src/Tools/translation/languages/fr.json
+++ b/src/Tools/translation/languages/fr.json
@@ -71,8 +71,12 @@
 	"no.data.student": "Pas d'étudiant",
 	"settings.constraints": "Contraintes",
 	"settings.constraints.companies": "Contraintes des entreprises",
+	"settings.constraints.lesson": "Contraintes des cours",
 	"settings.constraints.modules": "Contraintes des modules",
+	"settings.constraints.pathway": "Contraintes des formations",
 	"settings.constraints.professor": "Contraintes des professeurs",
+	"settings.constraints.room": "Contraintes des salles",
+	"settings.constraints.student": "Contraintes des étudiants",
 	"settings.global": "Globale",
 	"settings.global.accessiblity": "Mode accessibilité",
 	"settings.scope": "Fonctionnalités",
